# cuda_gtest_plugin

./: .gitignore  LICENSE  README.md
examples/: CMakeLists.txt  example_gtest_plugin.cu  example_gtest_plugin_host.cc  googletest.cmake
include/: cuda_gtest_plugin.h
